# ai_agents

./: .env.example  .gitignore  OLLAMA_INTEGRATION_TESTS.md  QUICK_START_GUIDE.md  README.md  cleanup_temp_files.py  package-lock.json  pyproject.toml  pytest.ini  tructure, sprint process, governance guides
.context/: ACTION_SUMMARY_CODEOWNER_JAN11.md  CODEOWNER_EXECUTION_PR_45.md  CODEOWNER_MERGE_PR_43.md  CODEOWNER_REVIEW_PR_40_41.md  CODEOWNER_REVIEW_PR_45.md  CONFIGURABLE_OLLAMA_MODEL_SUMMARY.md  CONVERSATIONAL_AGENT_BRIDGE_ARCHITECTURE.md  DAY_1_LAUNCH_GUIDE.md  GATE_3_OFFICIAL_PASS.md  GATE_3_PASS_APPROVAL.md  GITHUB_ISSUE_CLOSURE_CHECKLIST.md  ISSUE_16_CLOSURE.md  MODEL_CONFIGURATION.md  MULTI_CHANNEL_AGENT_ARCHITECTURE.md  OLLAMA_INTEGRATION_COMPLETE.md  OLLAMA_INTEGRATION_TESTS.md  OLLAMA_MODEL_IMPLEMENTATION_REPORT.md  OLLAMA_MODEL_QUICK_REFERENCE.md  OLLAMA_TOOLS_SUMMARY.md  PHASE_1_GO_STATUS.md  PM_EXECUTION_COMPLETE_SUMMARY.md  PM_FINAL_STATUS_EPIC_2_JAN11_EOD.md  PM_KICKOFF_EMAIL_TEMPLATE.md  PM_NOTIFICATION_ACTIONS_COMPLETE.md  PM_STATUS_REPORT_EPIC_2_JAN11.md  PR50_COMPLETION_SUMMARY.md  PROJECT_DASHBOARD_UPDATE_JAN11.md  PR_45_COMPLETION_SUMMARY.md  QUICK_START_REFERENCE.md  STREAM_3_GITHUB_ISSUES_UPDATE_JAN11.md  STREAM_3_ISSUE_ALIGNMENT_CHECK.md  STREAM_3_PATH_CORRECTIONS_JAN11.md  STREAM_3_PLANNING_MEETING_JAN11.md  TEAM_NOTIFICATION_ISSUES_RESOLVED.md  WEEK_1_SPRINT_LOG.md  WEEK_1_VERIFICATION_CHECKLIST.md  WEEK_1_VERIFICATION_COMPLETE.md  WEEK_2_LAUNCH_PLAN.md  Week1_Kickoff_Meeting.ics  Week1_Kickoff_Meeting_Notes.md  (+12 more)
.context/curriculum/: ai_agents_learning_curriculum.md
.context/project/: CURRICULUM_GAPS_AND_COMPONENT_MATURITY_MODEL.md  README.md
.context/review/: ai_agents_critical_review.md  ai_agents_reference_review.md
.context/sprint/: README.md  configuration-system-summary.md
.github/: ADOPTION_SUMMARY.md  CODEOWNERS  COMPLIANCE_REPORT.md  QUICK_REFERENCE.md  README.md  SETUP_INSTRUCTIONS.md  copilot-instructions.md  create-labels.ps1  create-labels.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-idea.md  02-epic.md  04-task.md  (+4 more)
Agents/: 01_introduction_motivation.md  02_what_is_an_ai_agent.md  03_what_problems_do_agents_solve.md  04_high_level_architecture.md  05_00_core_components.md  05_01_1_langchain.md  05_01_3_langraph.md  05_01_orchestrator_agent_controller.md  05_02_llms_and_reasoning_modes.md  05_03_tools_and_apis_agent.md  05_04_0_memory_and_rag.md  05_04_1_context_engineering.md  05_04_2_memory_write_policy.md  05_04_3_memory_retrieval_policy.md  05_05_policies_and_guardrails.md  05_06_observability_logging_metrics_tracing.md  06_design_decision_tree.md  07_design_decision_tree.md  08_scalability_and_performance.md  09_00_current_trends_and_patterns.md  09_01_agent_frameworks_and_multi_agent_systems.md  09_02_tool_use_computer_control_autonomous_workflows.md  09_03_retrieval_tools_planning_modern_stack.md  09_04_case_study_customer_support_agent.md  09_05_case_study_engineering_pcb_assistant.md  09_06_architecture_decisions_mapping_to_system.md  10_conclusion_future_directions.md  11_self_managed_vs_agent_as_a_service.md  12_01_customer_support_agent_architecture.md  12_02_travel_agent_architecture.md  12_03_electronics_design_agent_architecture.md  12_04_coding_agent_architecture.md  12_05_medical_agent_architecture.md  12_06_ops_troubleshooting_agent_architecture.md
config/: README.md  local.yaml  production.yaml  staging.yaml
curriculum/: ai_agents_learning_curriculum.md
docs/: agent_core_api.md  agent_labs_configuration.md  artifacts.md  configuration-usage.md  configuration.md  engine.md  memory.md  observability.md  performance.md  plugin_development.md  plugin_registry.md  test_infrastructure.md  testing.md  tools.md
examples/: README.md  multi_turn.py  simple_qna.py  tool_use.py
labs/: README.md
scripts/: .env.example  .gitignore  EXPLORE_README.md  Makefile  QUICK_START.md  README.md  advanced_interactive_agent.py  agent_bridge_demo.py  config_examples.py  demo_session_store.py  explore.py  interactive_agent.py  memory_test.py  pyproject.toml  quick_test.py  requirements.txt  setup.bat  setup.sh
tests/: __init__.py  conftest.py
vscode-extension/: .gitignore  QUICK_START.md  QUICK_START_TESTING.md  README.md  TESTING.md  TESTING_GUIDE.md  TESTING_PHASE2.md  TESTING_ROADMAP.md  TEST_RESULTS_PHASE2.md  jest.config.js  package-lock.json  package.json  tsconfig.json
web/: ARCHITECTURE.md  DEPLOYMENT.md  QUICK_START.md  README.md
(+692 files in other folders)
