[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-interactive"
version = "0.1.0"
description = "Interactive Agent Playground - REPL-style interface for AI agents"
requires-python = ">=3.11"
authors = [
    {name = "AI Agents Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["agents", "llm", "ai", "interactive", "repl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1",
    "pytest-asyncio>=0.21",
]

ollama = [
    "requests>=2.31.0",
]

all = [
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1",
    "requests>=2.31.0",
]

[project.scripts]
interactive-agent = "interactive_agent:main"

[tool.setuptools]
py-modules = ["interactive_agent"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = ["tests"]
pythonpath = ["../src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",  # Line too long (handled by black)
    "N806",  # Variable name case
]

[tool.ruff.isort]
known-first-party = ["agent_labs"]

[tool.coverage.run]
source = ["interactive_agent.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
# UV Python package manager configuration
# See: https://github.com/astral-sh/uv
python-version = "3.11"

[tool.uv.sources]
# Add any custom package sources if needed
